Version 0.8 -- Subversion
-----------------
* Rewrote all content handling from scratch for better expandibility

Version 0.7.3 -- Tue Nov 23 2004
-----------------

* Added Italian translation (emanuelez)
* Added more callback functions to module API
* Added config.php option to disable sending translations to htmlarea 
(#000049)
* Added active/inactive toggle in Content Management (Xorn725)
* Added categories and other fixes to the News module (calguy1000)
* Added breadcrumbs and sitemap plugins (Manarth)
* Added clear cache button to site preferences (#000055)
* Fixed syntax highlighting not submitting data of second textarea.
* Fixed HTMLArea to display properly with all languages, even if some
still default to en_US
* Fixed bug with handling of aliases in add/editcontent
* Fixed bug with relative paths in dhtmlmenu
* Fixed changing ownership of html blobs
* Fixed displaying html_blobs in modules with executeuser
* Fixed HTML bug in print module (#000048)
* Fixed error message with Deleting templates (Part of #000047)
* Fixed check_ownership and check_authorship to be more consistant 
(Xorn725)
* Fixed htmlarea so that it doesn't convert double quotes in &quot; and
mess up smarty tags
* Reenabled Image Manager
* Removed Allow Admin Access from add/edit user
* Updated adodb to 4.54

Vrersion 0.7.2 -- Wed Nov 10 2004
-----------------

* Added missing edit links to titles in CSS and News admin (#000035)
* Added ability to invert the foreground/background color of htmlarea 
(#0000031)
* Added search and replace to htmlarea
* Added ability to clean pastes from Microsoft Word in htmlarea
* Added pagination to majority of admin list pages
* Added google search plugin
* Added google pagerank plugin
* Added Expand/Collapse plugin
* Added print page plugin
* Added strip_tags to RSS output in News module (#000042)
* Changed en_US to UTF-8
* Changed with of add and edit html blob pages
* Changed all template lists to be ordered by template name (#000038)